removed POST with form url encoded, Spring has trouble to extract the body